...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="High Roller" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="High Roller" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About High Roller" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                                            <menuItem title="4" id="Ajs-dV-fW8"/>
                                                            <menuItem title="6" state="on" id="wrk-yE-XKZ"/>
                                                            <menuItem title="8" id="0Ro-lr-knj"/>
                                                            <menuItem title="10" id="dqP-nO-PRL">
                                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                            </menuItem>
                                                            <menuItem title="12" id="oKf-U2-63h">
                                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                            </menuItem>
                                                            <menuItem title="20" id="hr5-SM-deG">
                                                                <modifierMask key="keyEquivalentModifierMask"/>
                                                            </menuItem>
                                                            <menuItem title="100" id="4kV-bX-HUj">
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DHH-tT-7cQ">
                                <rect key="frame" x="265" y="20" width="195" height="66"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="195" id="4UJ-Vx-MON"/>
                                    <constraint firstAttribute="height" constant="66" id="N35-zI-v8n"/>
                                </constraints>
                                <buttonCell key="cell" type="square" title="Roll" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="VcM-QQ-VtM">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="systemSemibold" size="20"/>
                                </buttonCell>
                                <connections>
                                    <action selector="rollButtonClicked:" target="XfG-lQ-9wD" id="1gq-H7-68e"/>
                                </connections>
...
